--- a/src/components/nominees.css
+++ b/src/components/nominees.css
@@ -9,9 +9,10 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: .5rem;
+  width: 100%;
+  /* padding: .5rem; */
   /* grid-template-columns: repeat(4, 1fr); */
-  place-items: center;
+  /* place-items: center; */
 }
 h4 {
   font-family: "Nunito", "sans";
